tests/src/frontend/typechecking/invalid/method_as_lambda_2.sk
mutable class Foo(mutable x: Int) {
  readonly fun foo(): Int {
    this.x
  }
}

fun main(): void {
  _: () ~> Int = (mutable Foo(0)).foo;
  print_raw("FAIL")
}
